# IgniteShaderCompiler

./: CMakeLists.txt  README.md  license.txt
.github/workflows/: ci.yml
Example/: CPP_Example.cpp  C_Example.c  c_example.cmake  cpp_example.cmake
Example/Shaders/GLSL/: batch_2d_quad.pixel.glsl  batch_2d_quad.vertex.glsl  imgui.pixel.glsl  imgui.vertex.glsl
Example/Shaders/HLSL/: batch_2d_quad.pixel.hlsl  batch_2d_quad.vertex.hlsl  imgui.pixel.hlsl  imgui.vertex.hlsl
Source/: ShaderBase.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderCompilerCAPI.cpp  ShaderCompilerCAPI.h
